istio/public-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
#      tls:
#        httpsRedirect: true
#    - port:
#        number: 443
#        name: https
#        protocol: HTTPS
#      hosts:
#        - "*"
#      tls:
#        mode: SIMPLE
#        credentialName: tlskeys
#        privateKey: sds
#        serverCertificate: sds
#        minProtocolVersion: TLSV1_3
